--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -62,6 +62,12 @@ custom-power-armor-mk4-grid-size-w=[item=power-armor-mk4][color=yellow]Custom's 
 custom-power-armor-mk5-grid-size-h=[item=power-armor-mk5][color=yellow]Custom's Power Armour MK5 Height[/color]
 custom-power-armor-mk5-grid-size-w=[item=power-armor-mk5][color=yellow]Custom's Power Armour MK5 Width[/color]
 
+# Exotic Industries
+cas-bio-ei_bio-armor-inv-size=[item=ei_bio-armor][color=pink]Exotic's Bio Armour INV-B Size[/color]
+
+cas-bio-grid-size-h=[item=ei_bio-armor][color=pink]Exotic's Bio Armour Hight[/color]
+cas-bio-grid-size-w=[item=ei_bio-armor][color=pink]Exotic's Bio Armour Whith[/color]
+
 # Factorio Extended Equipment
 cas-extended-power-armor-1-inv-size=[item=power-armor-1][color=cyan]FE's Power Armour 1 Inv-B Size[/color]
 cas-extended-power-armor-2-inv-size=[item=power-armor-2][color=cyan]FE's Power Armour 2 Inv-B Size[/color]
@@ -76,6 +82,15 @@ extended-armor-mk2-grid-size-w=[item=power-armor-2][color=cyan]FE's Power Armour
 extended-armor-mk3-grid-size-h=[item=power-armor-3][color=cyan]FE's Power Armour MK3 Height[/color]
 extended-armor-mk3-grid-size-w=[item=power-armor-3][color=cyan]FE's Power Armour MK3 Width[/color]
 
+# Hiladder
+hl-hsmd-power-armor-mk3-inv-size=[item=hsmd-power-armor-mk3][color=purple]Hiladdar's Power Armour 3 INV-B[/color]
+hl-hsmd-power-armor-mk4-inv-size=[item=hsmd-power-armor-mk4][color=purple]Hiladdar's Power Armour 4 INV-B[/color]
+
+hl-3-grid-size-h=[item=hsmd-power-armor-mk3][color=purple]Hiladdar's Power Armour 3 Height[/color]
+hl-3-grid-size-w=[item=hsmd-power-armor-mk3][color=purple]Hiladdar's Power Armour 3 Width[/color]
+
+hl-4-grid-size-h=[item=hsmd-power-armor-mk4][color=purple]Hiladdar's Power Armour 4 Height[/color]
+hl-4-grid-size-w=[item=hsmd-power-armor-mk4][color=purple]Hiladdar's Power Armour 4 Width[/color]
 
 # IndustrialRevolution3
 ir3-light-cas-grid-size-h=[item=light-armor][color=brown]IR3 Light Armour Height[/color]
@@ -272,6 +287,12 @@ custom-power-armor-mk4-grid-size-w="Custom's" Power Armour MK4 Width\nMin:0\nMax
 custom-power-armor-mk5-grid-size-h="Custom's" Power Armour MK5 Height\nMin:0\nMax:500\nBase Default:16\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 custom-power-armor-mk5-grid-size-w="Custom's" Power Armour MK5 Width\nMin:0\nMax:500\nBase Default:16\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
+# Exotic Industries
+cas-bio-ei_bio-armor-inv-size=Exotic's Bio Armour\nMin:0\nMax:1500\nBase Default:60\n[color=yellow]With PA&R:\nMax:5500[/color]
+
+cas-bio-grid-size-h=Exotic's Bio Armour Hight\nMin:0\nMax:50\nBase Default:14\n[color=yellow]With PA&R:\nMax:1100[/color]\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+cas-bio-grid-size-w=Exotic's Bio Armour Whith\nMin:0\nMax:50\nBase Default:14\n[color=yellow]With PA&R:\nMax:1100[/color]\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+
 # Factorio Extended Equipment
 cas-extended-power-armor-1-inv-size=FE Power Armour 1\nMin:0\nMax:600\nBase Default:50
 cas-extended-power-armor-2-inv-size=FE Power Armour 2\nMin:0\nMax:700\nBase Default:80
@@ -286,6 +307,15 @@ extended-armor-mk2-grid-size-w="FE's" Power Armour MK2 Width\nMin:0\nMax:60\nBas
 extended-armor-mk3-grid-size-h="FE's" Power Armour MK3 Height\nMin:0\nMax:70\nBase Default:18\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 extended-armor-mk3-grid-size-w="FE's" Power Armour MK3 Width\nMin:0\nMax:70\nBase Default:18\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
+# Hiladder
+hl-hsmd-power-armor-mk3-inv-size=Hiladdar's Power Armour 3 INV-B\nMin:0\nMax:1500\nBase Default:40
+hl-hsmd-power-armor-mk4-inv-size=Hiladdar's Power Armour 4 INV-B\nMin:0\nMax:2000\nBase Default:50
+
+hl-3-grid-size-h=Hiladdar's Power Armour 3 Height\nMin:0\nMax:50\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+hl-3-grid-size-w=Hiladdar's Power Armour 3 Width\nMin:0\nMax:50\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+
+hl-4-grid-size-h=Hiladdar's Power Armour 4 Height\nMin:0\nMax:60\nBase Default:14\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+hl-4-grid-size-w=Hiladdar's Power Armour 4 Width\nMin:0\nMax:60\nBase Default:14\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 # IndustrialRevolution3
 ir3-light-cas-grid-size-h=IR3 Light Armour Height\nMin:0\nMax:15\nBase Default:4\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
