--- a/locale/no/mod-locales.cfg
+++ b/locale/no/mod-locales.cfg
@@ -4,7 +4,6 @@
 Geez-you-a-GOD=Ŏ̸̧͓̖͕̘͖̺̓̓̉̃h̴̘̜͕̪̰̗͚̫̱͊̓̾̽̾ ̴̲̲̬̣̥̭̱̐́̈́̾̓̾̓̀͐͝g̶̙̒̏̈͝ĕ̶̡̛̼̝̮͈̽̇̌͛̆̒͑̃̃͘e̴̲̾̿͛́̉̕͝͠ź̶̛͈̬̲̹̼̖̟͑͒͑̀̌̉ ̸̨͎̥̻͓̟͕̝̫͎̓͐͑͝t̴̥́̍̅ọ̶̡̟̰̯̩̙̲̓͗͛̐̀̇͠ ̵̨̱̃͊̅̒͌͛́͐͝͝O̵͇̟͔̾̓͗P̶̘̦̲͉̈́̓̏͆̕͘͝
 
 
-
 [achievement-description]
 Geez-you-a-GOD=Hva du trenger\n1-Justeringer.\n2-Forskning.\n3-Produser/lag\n4-Ta den på.
 
@@ -47,6 +46,12 @@ bob-power-armor-mk4-grid-size-w=[item=bob-power-armor-mk4][color=orange]Bob's El
 bob-power-armor-mk5-grid-size-h=[item=bob-power-armor-mk5][color=orange]Bob's Elektrisk Rustning MK5 Høyde[/color]
 bob-power-armor-mk5-grid-size-w=[item=bob-power-armor-mk5][color=orange]Bob's Elektrisk Rustning MK5 Bredde[/color]
 
+# Exotic Industries
+cas-bio-ei_bio-armor-inv-size=[item=ei_bio-armor][color=pink]Exotic's Bio Rustning Inv Størrelse[/color]
+
+cas-bio-grid-size-h=[item=ei_bio-armor][color=pink]Exotic's Bio Rustning Høyde[/color]
+cas-bio-grid-size-w=[item=ei_bio-armor][color=pink]Exotic's Bio Rustning Bredde[/color]
+
 # Factorio Extended Equipment
 cas-extended-power-armor-1-inv-size=[item=power-armor-1][color=cyan]FE Elektrisk Rustning 1 Inv Størrelse[/color]
 cas-extended-power-armor-2-inv-size=[item=power-armor-2][color=cyan]FE Elektrisk Rustning 2 Inv Størrelse[/color]
@@ -60,6 +65,16 @@ extended-armour-mk2-grid-size-w=[item=power-armor-2][color=cyan]FE's Elektrisk R
 
 extended-armour-mk3-grid-size-h=[item=power-armor-3][color=cyan]FE's Elektrisk Rustning MK3 Høyde[/color]
 extended-armour-mk3-grid-size-w=[item=power-armor-3][color=cyan]FE's Elektrisk Rustning MK3 Bredde[/color]
+
+# Hiladder
+hl-hsmd-power-armor-mk3-inv-size=[item=hsmd-power-armor-mk3][color=purple]Hiladdar's Elektrisk Rustning 3 Inv Størrelse[/color]
+hl-hsmd-power-armor-mk4-inv-size=[item=hsmd-power-armor-mk4][color=purple]Hiladdar's Elektrisk Rustning 4 Inv Størrelse[/color]
+
+hl-3-grid-size-h=[item=hsmd-power-armor-mk3][color=purple]Hiladdar's Elektrisk Rustning 3 Høyde[/color]
+hl-3-grid-size-w=[item=hsmd-power-armor-mk3][color=purple]Hiladdar's Elektrisk Rustning 3 Bredde[/color]
+
+hl-4-grid-size-h=[item=hsmd-power-armor-mk4][color=purple]Hiladdar's Elektrisk Rustning 4 Høyde[/color]
+hl-4-grid-size-w=[item=hsmd-power-armor-mk4][color=purple]Hiladdar's Elektrisk Rustning 4 Bredde[/color]
 
 # IndustrialRevolution3
 ir3-light-cas-grid-size-h=[item=light-armor][color=brown]IR3 Lett Rustning Høyde[/color]
@@ -253,6 +268,12 @@ custom-power-armor-mk4-grid-size-w=Custom's Elektrisk Rustning MK4 Bredde\nMin:0
 custom-power-armor-mk5-grid-size-h=Custom's Elektrisk Rustning MK5 Høyde\nMin:0\nMaks:500\nSpillets Normal:16\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 custom-power-armor-mk5-grid-size-w=Custom's Elektrisk Rustning MK5 Bredde\nMin:0\nMaks:500\nSpillets Normal:16\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
+# Exotic Industries
+cas-bio-ei_bio-armor-inv-size=Exotic's Bio Rustning\nMin:0\nMaks:1500\nSpillets Normal:60\n[color=yellow]Med PA&R Mod:\nMaks:5500[/color]
+
+cas-bio-grid-size-h=Exotic's Bio Rustning Høyde\nMin:0\nMaks:50\nSpillets Normal:14\n[color=yellow]Med PA&R Mod:\nMaks:1100[/color]\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+cas-bio-grid-size-w=Exotic's Bio Rustning Bredde\nMin:0\nMaks:50\nSpillets Normal:14\n[color=yellow]Med PA&R Mod:\nMaks:1100[/color]\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+
 # Factorio Extended Equipment
 cas-extended-power-armor-1-inv-size=FE Elektrisk Rustning 1\nMin:0\nMaks:500\nSpillets Normal:50
 cas-extended-power-armor-2-inv-size=FE Elektrisk Rustning 2\nMin:0\nMaks:1000\nSpillets Normal:80
@@ -267,6 +288,15 @@ extended-armour-mk2-grid-size-w=FE's Elektrisk Rustning MK2 Bredde\nMin:0\nMaks:
 extended-armour-mk3-grid-size-h=FE's Elektrisk Rustning MK3 Høyde\nMin:0\nMaks:70\nSpillets Normal:18\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 extended-armour-mk3-grid-size-w=FE's Elektrisk Rustning MK3 Bredde\nMin:0\nMaks:70\nSpillets Normal:18\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
+#Hiladder
+hl-hsmd-power-armor-mk3-inv-size=Hiladdar's Elektrisk Rustning 3\nMin:0\nMaks:1500\nSpillets Normal:40
+hl-hsmd-power-armor-mk4-inv-size=Hiladdar's Elektrisk Rustning 4\nMin:0\nMaks:2000\nSpillets Normal:50
+
+hl-3-grid-size-h=Hiladdar's Elektrisk Rustning 3 Høyde\nMin:0\nMaks:50\nSpillets Normal:12\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+hl-3-grid-size-w=Hiladdar's Elektrisk Rustning 3 Bredde\nMin:0\nMaks:50\nSpillets Normal:12\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+
+hl-4-grid-size-h=Hiladdar's Elektrisk Rustning 4 Høyde\nMin:0\nMaks:60\nSpillets Normal:14\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+hl-4-grid-size-w=Hiladdar's Elektrisk Rustning 4 Bredde\nMin:0\nMaks:60\nSpillets Normal:14\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
 # IndustrialRevolution3
 ir3-light-cas-grid-size-h=IR3 Lett Rustning Høyde\nMin:0\nMaks:15\nSpillets Normal:4\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
@@ -310,7 +340,6 @@ n-cas-nullius-chassis-3-inv-size=Nullius's Rustnings Ramme 3 \nMin:0\nMaks:3000\
 n-cas-nullius-chassis-4-inv-size=Nullius's Rustnings Ramme 4 \nMin:0\nMaks:4000\nSpillets Normal:30
 n-cas-nullius-chassis-5-inv-size=Nullius's Rustnings Ramme 5 \nMin:0\nMaks:5000\nSpillets Normal:40
 n-cas-nullius-chassis-6-inv-size=Nullius's Rustnings Ramme 6 \nMin:0\nMaks:6000\nSpillets Normal:50
-
 
 # Power Armour mk3 
 cas-pamk3-lvest-inv-size=MK3's Lett Bruksvest\nMin:0\nMaks:150\nSpillets Normal:10
