--- a/locale/no/mod-locales.cfg
+++ b/locale/no/mod-locales.cfg
@@ -160,46 +160,46 @@ pa-mk4-grid-size-h=[item=PaA-power-armor-mk4][color=#89CE94]P&A's Elektrisk Rust
 pa-mk4-grid-size-w=[item=PaA-power-armor-mk4][color=#89CE94]P&A's Elektrisk Rustning MK4 Bredde[/color]
 
 # Power Armour & Replacer
-par-1-grid-size-h=[item=a_mk1][color=#e00700]P.A.R's Elektrisk Rustning MK1 Høyde[/color]
-par-1-grid-size-w=[item=a_mk1][color=#e00700]P.A.R's Elektrisk Rustning MK1 Bredde[/color]
+par-1-grid-size-h=[item=par-armour-mk1][color=#e00700]P.A.R's Elektrisk Rustning MK1 Høyde[/color]
+par-1-grid-size-w=[item=par-armour-mk1][color=#e00700]P.A.R's Elektrisk Rustning MK1 Bredde[/color]
 
-par-2-grid-size-h=[item=a_mk2][color=#e00700]P.A.R's Elektrisk Rustning MK2 Høyde[/color]
-par-2-grid-size-w=[item=a_mk2][color=#e00700]P.A.R's Elektrisk Rustning MK2 Bredde[/color]
+par-2-grid-size-h=[item=par-armour-mk2][color=#e00700]P.A.R's Elektrisk Rustning MK2 Høyde[/color]
+par-2-grid-size-w=[item=par-armour-mk2][color=#e00700]P.A.R's Elektrisk Rustning MK2 Bredde[/color]
 
-par-3-grid-size-h=[item=a_mk3][color=#e00700]P.A.R's Elektrisk Rustning MK3 Høyde[/color]
-par-3-grid-size-w=[item=a_mk3][color=#e00700]P.A.R's Elektrisk Rustning MK3 Bredde[/color]
+par-3-grid-size-h=[item=par-armour-mk3][color=#e00700]P.A.R's Elektrisk Rustning MK3 Høyde[/color]
+par-3-grid-size-w=[item=par-armour-mk3][color=#e00700]P.A.R's Elektrisk Rustning MK3 Bredde[/color]
 
-par-4-grid-size-h=[item=a_mk4][color=#e00700]P.A.R's Elektrisk Rustning MK4 Høyde[/color]
-par-4-grid-size-w=[item=a_mk4][color=#e00700]P.A.R's Elektrisk Rustning MK4 Bredde[/color]
+par-4-grid-size-h=[item=par-armour-mk4][color=#e00700]P.A.R's Elektrisk Rustning MK4 Høyde[/color]
+par-4-grid-size-w=[item=par-armour-mk4][color=#e00700]P.A.R's Elektrisk Rustning MK4 Bredde[/color]
 
-par-5-grid-size-h=[item=a_mk5][color=#e00700]P.A.R's Elektrisk Rustning MK5 Høyde[/color]
-par-5-grid-size-w=[item=a_mk5][color=#e00700]P.A.R's Elektrisk Rustning MK5 Bredde[/color]
+par-5-grid-size-h=[item=par-armour-mk5][color=#e00700]P.A.R's Elektrisk Rustning MK5 Høyde[/color]
+par-5-grid-size-w=[item=par-armour-mk5][color=#e00700]P.A.R's Elektrisk Rustning MK5 Bredde[/color]
 
-par-6-grid-size-h=[item=a_mk6][color=#e00700]P.A.R's Elektrisk Rustning MK6 Høyde[/color]
-par-6-grid-size-w=[item=a_mk6][color=#e00700]P.A.R's Elektrisk Rustning MK6 Bredde[/color]
+par-6-grid-size-h=[item=par-armour-mk6][color=#e00700]P.A.R's Elektrisk Rustning MK6 Høyde[/color]
+par-6-grid-size-w=[item=par-armour-mk6][color=#e00700]P.A.R's Elektrisk Rustning MK6 Bredde[/color]
 
-par-7-grid-size-h=[item=a_mk7][color=#e00700]P.A.R's Elektrisk Rustning MK7 Høyde[/color]
-par-7-grid-size-w=[item=a_mk7][color=#e00700]P.A.R's Elektrisk Rustning MK7 Bredde[/color]
+par-7-grid-size-h=[item=par-armour-mk7][color=#e00700]P.A.R's Elektrisk Rustning MK7 Høyde[/color]
+par-7-grid-size-w=[item=par-armour-mk7][color=#e00700]P.A.R's Elektrisk Rustning MK7 Bredde[/color]
 
-par-8-grid-size-h=[item=a_mk8][color=#e00700]P.A.R's Elektrisk Rustning MK8 Høyde[/color]
-par-8-grid-size-w=[item=a_mk8][color=#e00700]P.A.R's Elektrisk Rustning MK8 Bredde[/color]
+par-8-grid-size-h=[item=par-armour-mk8][color=#e00700]P.A.R's Elektrisk Rustning MK8 Høyde[/color]
+par-8-grid-size-w=[item=par-armour-mk8][color=#e00700]P.A.R's Elektrisk Rustning MK8 Bredde[/color]
 
-par-9-grid-size-h=[item=a_mk9][color=#e00700]P.A.R's Elektrisk Rustning MK9 Høyde[/color]
-par-9-grid-size-w=[item=a_mk9][color=#e00700]P.A.R's Elektrisk Rustning MK9 Bredde[/color]
+par-9-grid-size-h=[item=par-armour-mk9][color=#e00700]P.A.R's Elektrisk Rustning MK9 Høyde[/color]
+par-9-grid-size-w=[item=par-armour-mk9][color=#e00700]P.A.R's Elektrisk Rustning MK9 Bredde[/color]
 
-par-10-grid-size-h=[item=a_mk10][color=#e00700]P.A.R's Elektrisk Rustning MK10 Høyde[/color]
-par-10-grid-size-w=[item=a_mk10][color=#e00700]P.A.R's Elektrisk Rustning MK10 Bredde[/color]
+par-10-grid-size-h=[item=par-armour-mk10][color=#e00700]P.A.R's Elektrisk Rustning MK10 Høyde[/color]
+par-10-grid-size-w=[item=par-armour-mk10][color=#e00700]P.A.R's Elektrisk Rustning MK10 Bredde[/color]
 
-m-cas-1-a_mk1-inv-size=[item=a_mk1][color=#e00700]P.A.R's Elektrisk Rustning MK1 Inv Størrelse[/color]
-m-cas-2-a_mk2-inv-size=[item=a_mk2][color=#e00700]P.A.R's Elektrisk Rustning MK2 Inv Størrelse[/color]
-m-cas-3-a_mk3-inv-size=[item=a_mk3][color=#e00700]P.A.R's Elektrisk Rustning MK3 Inv Størrelse[/color]
-m-cas-4-a_mk4-inv-size=[item=a_mk4][color=#e00700]P.A.R's Elektrisk Rustning MK4 Inv Størrelse[/color]
-m-cas-5-a_mk5-inv-size=[item=a_mk5][color=#e00700]P.A.R's Elektrisk Rustning MK5 Inv Størrelse[/color]
-m-cas-6-a_mk6-inv-size=[item=a_mk6][color=#e00700]P.A.R's Elektrisk Rustning MK6 Inv Størrelse[/color]
-m-cas-7-a_mk7-inv-size=[item=a_mk7][color=#e00700]P.A.R's Elektrisk Rustning MK7 Inv Størrelse[/color]
-m-cas-8-a_mk8-inv-size=[item=a_mk8][color=#e00700]P.A.R's Elektrisk Rustning MK8 Inv Størrelse[/color]
-m-cas-9-a_mk9-inv-size=[item=a_mk9][color=#e00700]P.A.R's Elektrisk Rustning MK9 Inv Størrelse[/color]
-m-cas-10-a_mk10-inv-size=[item=a_mk10][color=#e00700]P.A.R's Elektrisk Rustning MK10 Inv Størrelse[/color]
+m-cas-1-par-armour-mk1-inv-size=[item=par-armour-mk1][color=#e00700]P.A.R's Elektrisk Rustning MK1 Inv Størrelse[/color]
+m-cas-2-par-armour-mk2-inv-size=[item=par-armour-mk2][color=#e00700]P.A.R's Elektrisk Rustning MK2 Inv Størrelse[/color]
+m-cas-3-par-armour-mk3-inv-size=[item=par-armour-mk3][color=#e00700]P.A.R's Elektrisk Rustning MK3 Inv Størrelse[/color]
+m-cas-4-par-armour-mk4-inv-size=[item=par-armour-mk4][color=#e00700]P.A.R's Elektrisk Rustning MK4 Inv Størrelse[/color]
+m-cas-5-par-armour-mk5-inv-size=[item=par-armour-mk5][color=#e00700]P.A.R's Elektrisk Rustning MK5 Inv Størrelse[/color]
+m-cas-6-par-armour-mk6-inv-size=[item=par-armour-mk6][color=#e00700]P.A.R's Elektrisk Rustning MK6 Inv Størrelse[/color]
+m-cas-7-par-armour-mk7-inv-size=[item=par-armour-mk7][color=#e00700]P.A.R's Elektrisk Rustning MK7 Inv Størrelse[/color]
+m-cas-8-par-armour-mk8-inv-size=[item=par-armour-mk8][color=#e00700]P.A.R's Elektrisk Rustning MK8 Inv Størrelse[/color]
+m-cas-9-par-armour-mk9-inv-size=[item=par-armour-mk9][color=#e00700]P.A.R's Elektrisk Rustning MK9 Inv Størrelse[/color]
+m-cas-10-par-armour-mk10-inv-size=[item=par-armour-mk10][color=#e00700]P.A.R's Elektrisk Rustning MK10 Inv Størrelse[/color]
 
 hard_science_required=[item=space-science-pack][color=#e00700]legger til Verdensrom Forsknings Pakker[/color]
 
@@ -394,16 +394,16 @@ par-9-grid-size-w=P.A.R's Elektrisk Rustning MK5 Rutenett Bredde\nMin:0\nMaks:90
 par-10-grid-size-h=P.A.R's Elektrisk Rustning MK5 Rutenett Høyde\nMin:0\nMaks:1000\nSpillets Normal:100\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 par-10-grid-size-w=P.A.R's Elektrisk Rustning MK5 Rutenett Bredde\nMin:0\nMaks:1000\nSpillets Normal:100\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
-m-cas-1-a_mk1-inv-size=P.A.R's Elektrisk Rustning MK1 Inv Størrelse\nMin:0\nMaks:500\nBase Default:50
-m-cas-2-a_mk2-inv-size=P.A.R's Elektrisk Rustning MK2 Inv Størrelse\nMin:0\nMaks:1000\nBase Default:100
-m-cas-3-a_mk3-inv-size=P.A.R's Elektrisk Rustning MK3 Inv Størrelse\nMin:0\nMaks:1500\nBase Default:150
-m-cas-4-a_mk4-inv-size=P.A.R's Elektrisk Rustning MK4 Inv Størrelse\nMin:0\nMaks:2000\nBase Default:200
-m-cas-5-a_mk5-inv-size=P.A.R's Elektrisk Rustning MK5 Inv Størrelse\nMin:0\nMaks:2500\nBase Default:250
-m-cas-6-a_mk6-inv-size=P.A.R's Elektrisk Rustning MK6 Inv Størrelse\nMin:0\nMaks:3000\nBase Default:300
-m-cas-7-a_mk7-inv-size=P.A.R's Elektrisk Rustning MK7 Inv Størrelse\nMin:0\nMaks:3500\nBase Default:350
-m-cas-8-a_mk8-inv-size=P.A.R's Elektrisk Rustning MK8 Inv Størrelse\nMin:0\nMaks:4000\nBase Default:400
-m-cas-9-a_mk9-inv-size=P.A.R's Elektrisk Rustning MK9 Inv Størrelse\nMin:0\nMaks:4500\nBase Default:450
-m-cas-10-a_mk10-inv-size=P.A.R's Elektrisk Rustning MK10 Inv Størrelse\nMin:0\nMaks:5000\nBase Default:500
+m-cas-1-par-armour-mk1-inv-size=P.A.R's Elektrisk Rustning MK1 Inv Størrelse\nMin:0\nMaks:500\nBase Default:50
+m-cas-2-par-armour-mk2-inv-size=P.A.R's Elektrisk Rustning MK2 Inv Størrelse\nMin:0\nMaks:1000\nBase Default:100
+m-cas-3-par-armour-mk3-inv-size=P.A.R's Elektrisk Rustning MK3 Inv Størrelse\nMin:0\nMaks:1500\nBase Default:150
+m-cas-4-par-armour-mk4-inv-size=P.A.R's Elektrisk Rustning MK4 Inv Størrelse\nMin:0\nMaks:2000\nBase Default:200
+m-cas-5-par-armour-mk5-inv-size=P.A.R's Elektrisk Rustning MK5 Inv Størrelse\nMin:0\nMaks:2500\nBase Default:250
+m-cas-6-par-armour-mk6-inv-size=P.A.R's Elektrisk Rustning MK6 Inv Størrelse\nMin:0\nMaks:3000\nBase Default:300
+m-cas-7-par-armour-mk7-inv-size=P.A.R's Elektrisk Rustning MK7 Inv Størrelse\nMin:0\nMaks:3500\nBase Default:350
+m-cas-8-par-armour-mk8-inv-size=P.A.R's Elektrisk Rustning MK8 Inv Størrelse\nMin:0\nMaks:4000\nBase Default:400
+m-cas-9-par-armour-mk9-inv-size=P.A.R's Elektrisk Rustning MK9 Inv Størrelse\nMin:0\nMaks:4500\nBase Default:450
+m-cas-10-par-armour-mk10-inv-size=P.A.R's Elektrisk Rustning MK10 Inv Størrelse\nMin:0\nMaks:5000\nBase Default:500
 
 hard_science_required=Legger til ekstra verdensrom forsknings pakker til MK6 til MK10 og Exoskjelett MK5. For å gjøre det vanskeligere.\nDenne instillingen har ingen fynksjonen hvis to spiller med SE mod.\nIntill jeg finner enn fiks.
 
