--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -158,46 +158,46 @@ pamk3-pmak4-grid-size-h=[item=pamk3-pamk4][color=#101798]Mk3's Power Armour MK4 
 pamk3-pmak4-grid-size-w=[item=pamk3-pamk4][color=#101798]Mk3's Power Armour MK4 Width[/color]
 
 # Power Armour & Replacer
-par-1-grid-size-h=[item=a_mk1][color=#e00700]P.A.R's Armour MK1 Height[/color]
-par-1-grid-size-w=[item=a_mk1][color=#e00700]P.A.R's Armour MK1 Width[/color]
+par-1-grid-size-h=[item=par-armour-mk1][color=#e00700]P.A.R's Armour MK1 Height[/color]
+par-1-grid-size-w=[item=par-armour-mk1][color=#e00700]P.A.R's Armour MK1 Width[/color]
 
-par-2-grid-size-h=[item=a_mk2][color=#e00700]P.A.R's Armour MK2 Height[/color]
-par-2-grid-size-w=[item=a_mk2][color=#e00700]P.A.R's Armour MK2 Width[/color]
+par-2-grid-size-h=[item=par-armour-mk2][color=#e00700]P.A.R's Armour MK2 Height[/color]
+par-2-grid-size-w=[item=par-armour-mk2][color=#e00700]P.A.R's Armour MK2 Width[/color]
 
-par-3-grid-size-h=[item=a_mk3][color=#e00700]P.A.R's Armour MK3 Height[/color]
-par-3-grid-size-w=[item=a_mk3][color=#e00700]P.A.R's Armour MK3 Width[/color]
+par-3-grid-size-h=[item=par-armour-mk3][color=#e00700]P.A.R's Armour MK3 Height[/color]
+par-3-grid-size-w=[item=par-armour-mk3][color=#e00700]P.A.R's Armour MK3 Width[/color]
 
-par-4-grid-size-h=[item=a_mk4][color=#e00700]P.A.R's Armour MK4 Height[/color]
-par-4-grid-size-w=[item=a_mk4][color=#e00700]P.A.R's Armour MK4 Width[/color]
+par-4-grid-size-h=[item=par-armour-mk4][color=#e00700]P.A.R's Armour MK4 Height[/color]
+par-4-grid-size-w=[item=par-armour-mk4][color=#e00700]P.A.R's Armour MK4 Width[/color]
 
-par-5-grid-size-h=[item=a_mk5][color=#e00700]P.A.R's Armour MK5 Height[/color]
-par-5-grid-size-w=[item=a_mk5][color=#e00700]P.A.R's Armour MK5 Width[/color]
+par-5-grid-size-h=[item=par-armour-mk5][color=#e00700]P.A.R's Armour MK5 Height[/color]
+par-5-grid-size-w=[item=par-armour-mk5][color=#e00700]P.A.R's Armour MK5 Width[/color]
 
-par-6-grid-size-h=[item=a_mk6][color=#e00700]P.A.R's Armour MK6 Height[/color]
-par-6-grid-size-w=[item=a_mk6][color=#e00700]P.A.R's Armour MK6 Width[/color]
+par-6-grid-size-h=[item=par-armour-mk6][color=#e00700]P.A.R's Armour MK6 Height[/color]
+par-6-grid-size-w=[item=par-armour-mk6][color=#e00700]P.A.R's Armour MK6 Width[/color]
 
-par-7-grid-size-h=[item=a_mk7][color=#e00700]P.A.R's Armour MK7 Height[/color]
-par-7-grid-size-w=[item=a_mk7][color=#e00700]P.A.R's Armour MK7 Width[/color]
+par-7-grid-size-h=[item=par-armour-mk7][color=#e00700]P.A.R's Armour MK7 Height[/color]
+par-7-grid-size-w=[item=par-armour-mk7][color=#e00700]P.A.R's Armour MK7 Width[/color]
 
-par-8-grid-size-h=[item=a_mk8][color=#e00700]P.A.R's Armour MK8 Height[/color]
-par-8-grid-size-w=[item=a_mk8][color=#e00700]P.A.R's Armour MK8 Width[/color]
+par-8-grid-size-h=[item=par-armour-mk8][color=#e00700]P.A.R's Armour MK8 Height[/color]
+par-8-grid-size-w=[item=par-armour-mk8][color=#e00700]P.A.R's Armour MK8 Width[/color]
 
-par-9-grid-size-h=[item=a_mk9][color=#e00700]P.A.R's Armour MK9 Height[/color]
-par-9-grid-size-w=[item=a_mk9][color=#e00700]P.A.R's Armour MK9 Width[/color]
+par-9-grid-size-h=[item=par-armour-mk9][color=#e00700]P.A.R's Armour MK9 Height[/color]
+par-9-grid-size-w=[item=par-armour-mk9][color=#e00700]P.A.R's Armour MK9 Width[/color]
 
-par-10-grid-size-h=[item=a_mk10][color=#e00700]P.A.R's Armour MK10 Height[/color]
-par-10-grid-size-w=[item=a_mk10][color=#e00700]P.A.R's Armour MK10 Width[/color]
+par-10-grid-size-h=[item=par-armour-mk10][color=#e00700]P.A.R's Armour MK10 Height[/color]
+par-10-grid-size-w=[item=par-armour-mk10][color=#e00700]P.A.R's Armour MK10 Width[/color]
 
-m-cas-1-a_mk1-inv-size=[item=a_mk1][color=#e00700]P.A.R's Power Armour MK1 Inv-B Size[/color]
-m-cas-2-a_mk2-inv-size=[item=a_mk2][color=#e00700]P.A.R's Power Armour MK2 Inv-B Size[/color]
-m-cas-3-a_mk3-inv-size=[item=a_mk3][color=#e00700]P.A.R's Power Armour MK3 Inv-B Size[/color]
-m-cas-4-a_mk4-inv-size=[item=a_mk4][color=#e00700]P.A.R's Power Armour MK4 Inv-B Size[/color]
-m-cas-5-a_mk5-inv-size=[item=a_mk5][color=#e00700]P.A.R's Power Armour MK5 Inv-B Size[/color]
-m-cas-6-a_mk6-inv-size=[item=a_mk6][color=#e00700]P.A.R's Power Armour MK6 Inv-B Size[/color]
-m-cas-7-a_mk7-inv-size=[item=a_mk7][color=#e00700]P.A.R's Power Armour MK7 Inv-B Size[/color]
-m-cas-8-a_mk8-inv-size=[item=a_mk8][color=#e00700]P.A.R's Power Armour MK8 Inv-B Size[/color]
-m-cas-9-a_mk9-inv-size=[item=a_mk9][color=#e00700]P.A.R's Power Armour MK9 Inv-B Size[/color]
-m-cas-10-a_mk10-inv-size=[item=a_mk10][color=#e00700]P.A.R's Power Armour MK10 Inv-B Size[/color]
+m-cas-1-par-armour-mk1-inv-size=[item=par-armour-mk1][color=#e00700]P.A.R's Power Armour MK1 Inv-B Size[/color]
+m-cas-2-par-armour-mk2-inv-size=[item=par-armour-mk2][color=#e00700]P.A.R's Power Armour MK2 Inv-B Size[/color]
+m-cas-3-par-armour-mk3-inv-size=[item=par-armour-mk3][color=#e00700]P.A.R's Power Armour MK3 Inv-B Size[/color]
+m-cas-4-par-armour-mk4-inv-size=[item=par-armour-mk4][color=#e00700]P.A.R's Power Armour MK4 Inv-B Size[/color]
+m-cas-5-par-armour-mk5-inv-size=[item=par-armour-mk5][color=#e00700]P.A.R's Power Armour MK5 Inv-B Size[/color]
+m-cas-6-par-armour-mk6-inv-size=[item=par-armour-mk6][color=#e00700]P.A.R's Power Armour MK6 Inv-B Size[/color]
+m-cas-7-par-armour-mk7-inv-size=[item=par-armour-mk7][color=#e00700]P.A.R's Power Armour MK7 Inv-B Size[/color]
+m-cas-8-par-armour-mk8-inv-size=[item=par-armour-mk8][color=#e00700]P.A.R's Power Armour MK8 Inv-B Size[/color]
+m-cas-9-par-armour-mk9-inv-size=[item=par-armour-mk9][color=#e00700]P.A.R's Power Armour MK9 Inv-B Size[/color]
+m-cas-10-par-armour-mk10-inv-size=[item=par-armour-mk10][color=#e00700]P.A.R's Power Armour MK10 Inv-B Size[/color]
 
 hard_science_required=[item=space-science-pack][color=#e00700]Adding space science packs[/color]
 
@@ -431,16 +431,16 @@ par-9-grid-size-w=P.A.R's Power Armours Mk9 Width\nMin:0\nMax:900\nBase Default:
 par-10-grid-size-h=P.A.R's Power Armours Mk10 Height\nMin:0\nMax:1000\nBase Default:100\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 par-10-grid-size-w=P.A.R's Power Armours Mk10 Width\nMin:0\nMax:1000\nBase Default:100\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-m-cas-1-a_mk1-inv-size=P.A.R's Power Armour MK1 Inv-B Size\nMin:0\nMax:500\nBase Default:50\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-m-cas-2-a_mk2-inv-size=P.A.R's Power Armour MK2 Inv-B Size\nMin:0\nMax:1000\nBase Default:100\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-m-cas-3-a_mk3-inv-size=P.A.R's Power Armour MK3 Inv-B Size\nMin:0\nMax:1500\nBase Default:150\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-m-cas-4-a_mk4-inv-size=P.A.R's Power Armour MK4 Inv-B Size\nMin:0\nMax:2000\nBase Default:200\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-m-cas-5-a_mk5-inv-size=P.A.R's Power Armour MK5 Inv-B Size\nMin:0\nMax:2500\nBase Default:250\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-m-cas-6-a_mk6-inv-size=P.A.R's Power Armour MK6 Inv-B Size\nMin:0\nMax:3000\nBase Default:300\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-m-cas-7-a_mk7-inv-size=P.A.R's Power Armour MK7 Inv-B Size\nMin:0\nMax:3500\nBase Default:350\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-m-cas-8-a_mk8-inv-size=P.A.R's Power Armour MK8 Inv-B Size\nMin:0\nMax:4000\nBase Default:400\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-m-cas-9-a_mk9-inv-size=P.A.R's Power Armour MK9 Inv-B Size\nMin:0\nMax:4500\nBase Default:450\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-m-cas-10-a_mk10-inv-size=P.A.R's Power Armour MK10 Inv-B Size\nMin:0\nMax:5000\nBase Default:500\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+m-cas-1-par-armour-mk1-inv-size=P.A.R's Power Armour MK1 Inv-B Size\nMin:0\nMax:500\nBase Default:50\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+m-cas-2-par-armour-mk2-inv-size=P.A.R's Power Armour MK2 Inv-B Size\nMin:0\nMax:1000\nBase Default:100\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+m-cas-3-par-armour-mk3-inv-size=P.A.R's Power Armour MK3 Inv-B Size\nMin:0\nMax:1500\nBase Default:150\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+m-cas-4-par-armour-mk4-inv-size=P.A.R's Power Armour MK4 Inv-B Size\nMin:0\nMax:2000\nBase Default:200\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+m-cas-5-par-armour-mk5-inv-size=P.A.R's Power Armour MK5 Inv-B Size\nMin:0\nMax:2500\nBase Default:250\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+m-cas-6-par-armour-mk6-inv-size=P.A.R's Power Armour MK6 Inv-B Size\nMin:0\nMax:3000\nBase Default:300\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+m-cas-7-par-armour-mk7-inv-size=P.A.R's Power Armour MK7 Inv-B Size\nMin:0\nMax:3500\nBase Default:350\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+m-cas-8-par-armour-mk8-inv-size=P.A.R's Power Armour MK8 Inv-B Size\nMin:0\nMax:4000\nBase Default:400\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+m-cas-9-par-armour-mk9-inv-size=P.A.R's Power Armour MK9 Inv-B Size\nMin:0\nMax:4500\nBase Default:450\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+m-cas-10-par-armour-mk10-inv-size=P.A.R's Power Armour MK10 Inv-B Size\nMin:0\nMax:5000\nBase Default:500\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 hard_science_required=Adding space science packs to be required in reserching MK6 --> MK10 & MK5 Exo.\nThis setting has no effect if u use this mod with SE (Space Exploration).
 
