--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -234,7 +234,7 @@ se-thruster-suit-4-grid-size-w=[item=se-thruster-suit-4][color=pink]SE's Space S
 
 # Vanilla Armour's
 
-simulation_crash=Checked this box\nSims with equipment grids are removed.\n\nUn-checked this box \nThe sims are not removed.\n[color=red]Keep marked should the simulation be a black screen w/error message[/color] 
+simulation_crash=Checked this box\nSims with equipment grids are removed.\n\nUn-checked this box\nThe sims are not removed.\n[color=red]Keep marked should the simulation be a black screen w/error message.[/color] 
 
 v-cas-light-armor-inv-size=Light Armour\nMin:0\nMax:100\nBase Default:0
 v-cas-heavy-armor-inv-size=Heavy Armour\nMin:0\nMax:200\nBase Default:0
