--- a/locale/no/mod-locales.cfg
+++ b/locale/no/mod-locales.cfg
@@ -9,6 +9,8 @@ Geez-you-a-GOD=Hva du trenger\n1-Justeringer.\n2-Forskning.\n3-Produser/lag\n4-T
 
 [mod-setting-name]
 # Vanilla Armour's
+simulation_crash=Fjerner simulering bak hoved meny.
+
 v-cas-light-armor-inv-size=[item=light-armor][color=#C0C0C0]Lett Rustining Inv Størrelse[/color]
 v-cas-heavy-armor-inv-size=[item=heavy-armor][color=#C0C0C0]Tung Rustining Inv Størrelse[/color]
 v-cas-modular-armor-inv-size=[item=modular-armor][color=#C0C0C0]Modulær Rustining Inv Størrelse[/color]
@@ -217,6 +219,9 @@ power-armor-mk3-armor-rampant-arsenal-grid-size-w=[item=power-armor-mk3-armor-ra
 # Also to keep the translation clean keep the Hight first and Witdh under, Should u do a pull request.
 
 # Vanilla Armour's
+
+simulation_crash=Har skjekk marke\nSim med utstyr rutenett er fjernet.\n\nuten sjekk marke\nSim med utstyr rutenett vil vise.\n[color=red]Behold marke om du har simulasjonen med svart skjerm og error melding.[/color] 
+
 v-cas-light-armor-inv-size=Lett Rustning\nMin:0\nMaks:100\nSpillets Normal:0
 v-cas-heavy-armor-inv-size=Tung Rustning\nMin:0\nMaks:200\nSpillets Normal:0
 v-cas-modular-armor-inv-size=Modulær Rustning\nMin:0\nMaks:250\nSpillets Normal:10
