Grids for Power armour MK3 Light & Heavy vest. default settings. bugfixes. moved code around.

--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -151,6 +151,12 @@ cas-pamk3-hvest-inv-size=[item=pamk3-hvest][color=#101798]MK3's Heavy Utility Ve
 cas-pamk3-pamk3-inv-size=[item=pamk3-pamk3][color=#101798]MK3's Power Armour MK3 Inv-B Size[/color]
 cas-pamk3-pamk4-inv-size=[item=pamk3-pamk4][color=#101798]MK3's Power Armour MK4 Inv-B Size[/color]
 
+util-vlight-grid-h=[item=pamk3-lvest][color=#101798]Mk3's Light utillity vest Height[/color]
+util-vlight-grid-w=[item=pamk3-lvest][color=#101798]Mk3's Light utillity vest Width[/color]
+
+util-vheavy-grid-h=[item=pamk3-hvest][color=#101798]Mk3's Heavy Utillity vest Height[/color]
+util-vheavy-grid-w=[item=pamk3-hvest][color=#101798]Mk3's Heavy Utillity vest Width[/color]
+
 pamk3-pmak3-grid-size-h=[item=pamk3-pamk3][color=#101798]Mk3's Power Armour MK3 Height[/color]
 pamk3-pmak3-grid-size-w=[item=pamk3-pamk3][color=#101798]Mk3's Power Armour MK3 Width[/color]
 
@@ -394,8 +400,14 @@ cas-pamk3-hvest-inv-size=MK3's Hevay Utility Vest\nMin:0\nMax:600\nBase Default:
 cas-pamk3-pamk3-inv-size=MK3's Power Armour MK3\nMin:0\nMax:800\nBase Default:50
 cas-pamk3-pamk4-inv-size=MK3's Power Armour Mk4\nMin:0\nMax:900\nBase Default:60
 
-pamk3-pmak3-grid-size-h="MK3's" Power Armour MK3 Height\nMin:0\nMax:30\nBase Default:14\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
-pamk3-pmak3-grid-size-w="MK3's" Power Armour MK3 Width\nMin:0\nMax:30\nBase Default:14\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+util-vlight-grid-h="MK3's" Power Armour MK3 Height\nMin:0\nMax:10\nBase Default:0\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+util-vlight-grid-w="MK3's" Power Armour MK3 Width\nMin:0\nMax:10\nBase Default:0\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+
+util-vheavy-grid-h="MK3's" Power Armour MK3 Height\nMin:0\nMax:10\nBase Default:0\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+util-vheavy-grid-w="MK3's" Power Armour MK3 Width\nMin:0\nMax:10\nBase Default:0\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+
+pamk3-pmak3-grid-size-h="MK3's" Power Armour MK3 Height\nMin:0\nMax:40\nBase Default:14\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+pamk3-pmak3-grid-size-w="MK3's" Power Armour MK3 Width\nMin:0\nMax:40\nBase Default:14\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
 
 pamk3-pmak4-grid-size-h="MK3's" Power Armour MK4 Height\nMin:0\nMax:50\nBase Default:20\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
 pamk3-pmak4-grid-size-w="MK3's" Power Armour MK4 Width\nMin:0\nMax:50\nBase Default:20\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
