--- a/locale/no/mod-locales.cfg
+++ b/locale/no/mod-locales.cfg
@@ -145,6 +145,11 @@ cas-pamk3-hvest-inv-size=[item=pamk3-hvest][color=#101798]MK3's Tung Bruksvest I
 cas-pamk3-pamk3-inv-size=[item=pamk3-pamk3][color=#101798]MK3's Elektrisk Rustning MK3 Inv Størrelse[/color]
 cas-pamk3-pamk4-inv-size=[item=pamk3-pamk4][color=#101798]MK3's Elektrisk Rustning MK4 Inv Størrelse[/color]
 
+util-vlight-grid-h=[item=pamk3-lvest][color=#101798]Mk3's Elektrisk Rustning MK3 Høyde[/color]
+util-vlight-grid-w=[item=pamk3-lvest][color=#101798]Mk3's Elektrisk Rustning MK3 Bredde[/color]
+util-vheavy-grid-h=[item=pamk3-hvest][color=#101798]Mk3's Elektrisk Rustning MK3 Høyde[/color]
+util-vheavy-grid-w=[item=pamk3-hvest][color=#101798]Mk3's Elektrisk Rustning MK3 Bredde[/color]
+
 pamk3-pmak3-grid-size-h=[item=pamk3-pamk3][color=#101798]Mk3's Elektrisk Rustning MK3 Høyde[/color]
 pamk3-pmak3-grid-size-w=[item=pamk3-pamk3][color=#101798]Mk3's Elektrisk Rustning MK3 Bredde[/color]
 
@@ -352,8 +357,14 @@ cas-pamk3-hvest-inv-size=MK3's Tung Bruksvest\nMin:0\nMaks:200\nSpillets Normal:
 cas-pamk3-pamk3-inv-size=MK3's Elektrisk Rustning MK3\nMin:0\nMaks:1000\nSpillets Normal:50
 cas-pamk3-pamk4-inv-size=MK3's Elektrisk Rustning Mk4\nMin:0\nMaks:1500\nSpillets Normal:60
 
-pamk3-pmak3-grid-size-h=MK3's Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:30\nSpillets Normal:14\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
-pamk3-pmak3-grid-size-w=MK3's Elektrisk Rustning MK3 Rutenett Bredde\nMin:0\nMaks:30\nSpillets Normal:14\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
+util-vlight-grid-h=MK3's Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:10\nSpillets Normal:0\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
+util-vlight-grid-w=MK3's Elektrisk Rustning MK3 Rutenett Bredde\nMin:0\nMaks:10\nSpillets Normal:0\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
+
+util-vheavy-grid-h=MK3's Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:10\nSpillets Normal:0\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
+util-vheavy-grid-w=MK3's Elektrisk Rustning MK3 Rutenett Bredde\nMin:0\nMaks:10\nSpillets Normal:0\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
+
+pamk3-pmak3-grid-size-h=MK3's Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:40\nSpillets Normal:14\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
+pamk3-pmak3-grid-size-w=MK3's Elektrisk Rustning MK3 Rutenett Bredde\nMin:0\nMaks:40\nSpillets Normal:14\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
 
 pamk3-pmak4-grid-size-h=MK3's Elektrisk Rustning MK4 Rutenett Høyde\nMin:0\nMaks:50\nSpillets Normal:20\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
 pamk3-pmak4-grid-size-w=MK3's Elektrisk Rustning MK4 Rutenett Bredde\nMin:0\nMaks:50\nSpillets Normal:20\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
