--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -32,6 +32,12 @@ power-armor-grid-size-w=[item=power-armor][color=#C0C0C0]Power Armour MK1 Width[
 power-armor-mk2-grid-size-h=[item=power-armor-mk2][color=#C0C0C0]Power Armour MK2 Height[/color]
 power-armor-mk2-grid-size-w=[item=power-armor-mk2][color=#C0C0C0]Power Armour MK2 Width[/color]
 
+# DLC Armour's
+mech-armor-grid-size-h=[item=mech-armor][color=#C0C0C0]Mech-Armor Height[/color]
+mech-armor-grid-size-w=[item=mech-armor][color=#C0C0C0]Mech-Armor Width[/color]
+
+sa-cas-mech-armor-inv-size=[item=mech-armor][color=#C0C0C0]mech-armor Inv-B Size[/color]
+
 # Bob's Armour's
 cas-bob-heavy-armor-2-inv-size=[item=heavy-armor-2][color=orange]Bob's Heavy Armor Mk2 Inv-B Size[/color]
 cas-bob-heavy-armor-3-inv-size=[item=heavy-armor-3][color=orange]Bob's Heavy Armor MK3 Inv-B Size[/color]
@@ -262,6 +268,12 @@ power-armor-grid-size-w=Power Armour MK1 Width\nMin:0\nMax:20\nBase Default:7\n[
 
 power-armor-mk2-grid-size-h=Power Armour MK2 Height\nMin:0\nMax:40\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
 power-armor-mk2-grid-size-w=Power Armour MK2 Width\nMin:0\nMax:40\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+
+# DLC Armour's
+sa-cas-mech-armor-inv-size=Mech Armor\nMin:0\nMax:1500\nBase Default:50
+
+mech-armor-grid-size-h=Mech Armor\nMin:0\nMax:60\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
+mech-armor-grid-size-w=Mech Armor\nMin:0\nMax:60\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for you loosing items from inventory when reducing INV size on exsisting save.[/color]
 
 # Bob's Armour's
 cas-bob-heavy-armor-2-inv-size=Bob's Heavy Armor 2\nMin:0\nMax:750\nBase Default:0
