--- a/locale/no/mod-locales.cfg
+++ b/locale/no/mod-locales.cfg
@@ -32,6 +32,12 @@ power-armor-grid-size-w=[item=power-armor][color=#C0C0C0]Elektrisk Rustning Bred
 power-armor-mk2-grid-size-h=[item=power-armor-mk2][color=#C0C0C0]Elektrisk Rustning mk2 Høyde[/color]
 power-armor-mk2-grid-size-w=[item=power-armor-mk2][color=#C0C0C0]Elektrisk Rustning mk2 Bredde[/color]
 
+# DLC Armour's
+mech-armor-grid-size-h=[item=mech-armor][color=#C0C0C0]Mekanisk Rustning Høyde[/color]
+mech-armor-grid-size-w=[item=mech-armor][color=#C0C0C0]Mekanisk Rustning Bredde[/color]
+
+sa-cas-mech-armor-inv-size=[item=mech-armor][color=#C0C0C0]Mekanisk Rustning Inv Størrelse[/color]
+
 # Bob's Armour's
 cas-bob-heavy-armor-2-inv-size=[item=heavy-armor-2][color=orange]Bob's Kobolt Tung Rustining MK2 Inv Størrelse[/color]
 cas-bob-heavy-armor-3-inv-size=[item=heavy-armor-3][color=orange]Bob's Titan Tung Rustining Mk3 Inv Størrelse[/color]
@@ -89,11 +95,11 @@ ir3-heavy-cas-grid-size-w=[item=heavy-armor][color=brown]IR3 Tung Rustning Bredd
 cas-k2-power-armor-mk3-inv-size=[item=power-armor-mk3][color=#9000d3]K2 Power Armour Mk3 Inv Størrelse[/color]
 cas-k2-power-armor-mk4-inv-size=[item=power-armor-mk4][color=#9000d3]K2 Power Armour Mk4 Inv Størrelse[/color]
 
-mk3-armor-grid-size-h=[item=power-armor-mk3][color=#9000d3]K2's Elektrisk Rustning MK3 Høyde[/color]
-mk3-armor-grid-size-w=[item=power-armor-mk3][color=#9000d3]K2's Elektrisk Rustning MK3 Bredde[/color]
+mk3-armor-grid-size-h=[item=power-armor-mk3][color=#9000d3]K2's Elektriske Rustning MK3 Høyde[/color]
+mk3-armor-grid-size-w=[item=power-armor-mk3][color=#9000d3]K2's Elektriske Rustning MK3 Bredde[/color]
 
-mk4-armor-grid-size-h=[item=power-armor-mk4][color=#9000d3]K2's Elektrisk Rustning MK4 Høyde[/color]
-mk4-armor-grid-size-w=[item=power-armor-mk4][color=#9000d3]K2's Elektrisk Rustning MK4 Bredde[/color]
+mk4-armor-grid-size-h=[item=power-armor-mk4][color=#9000d3]K2's Elektriske Rustning MK4 Høyde[/color]
+mk4-armor-grid-size-w=[item=power-armor-mk4][color=#9000d3]K2's Elektriske Rustning MK4 Bredde[/color]
 
 # Nullius
 nullius-1-grid-size-h=[item=nullius-chassis-1][color=#9000d3]Nullius's Rustnings Ramme 1 Høyde[/color]
@@ -248,6 +254,12 @@ power-armor-grid-size-w=Elektrisk Rustnings Rutenett Bredde\nMin:0\nMaks:20\nSpi
 power-armor-mk2-grid-size-h=Elektrisk Rustning MK2 Rutenett Høyde\nMin:0\nMaks:40\nSpillets Normal:10\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
 power-armor-mk2-grid-size-w=Elektrisk Rustning MK2 Rutenett Bredde\nMin:0\nMaks:40\nSpillets Normal:10\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
 
+# DLC Armour's
+mech-armor-grid-size-h=Mekanisk Rustning\nMin:0\nMaks:60\nSpillets Normal:10\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
+mech-armor-grid-size-w=Mekanisk Rustning\nMin:0\nMaks:60\nSpillets Normal:12\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
+
+sa-cas-mech-armor-inv-size=Mekanisk Rustning\nMin:0\nMaks:1500\nSpillets Normal:50\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
+
 # Bob's Armour's
 cas-bob-heavy-armor-2-inv-size=Bob's Tung Rustning Mk2\nMin:0\nMaks:750\nSpillets Normal:0
 cas-bob-heavy-armor-3-inv-size=Bob's Tung Rustning Mk3\nMin:0\nMaks:1250\nSpillets Normal:0
@@ -344,12 +356,12 @@ nullius-5-grid-size-w=Nullius's Rustnings Ramme 5 Bredde\nMin:0\nMaks:700\nSpill
 nullius-6-grid-size-h=Nullius's Rustnings Ramme 6 Høyde\nMin:0\nMaks:800\nSpillets Normal:18\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
 nullius-6-grid-size-w=Nullius's Rustnings Ramme 6 Bredde\nMin:0\nMaks:800\nSpillets Normal:10\n[color=red]Advarsel!!! Modden er ikke ansvalig for mistet ting om du gjør endringer i et pågående spill[/color]
 
-n-cas-nullius-chassis-1-inv-size=Nullius's Rustnings Ramme 1 \nMin:0\nMaks:1000\nSpillets Normal:0
-n-cas-nullius-chassis-2-inv-size=Nullius's Rustnings Ramme 2 \nMin:0\nMaks:2000\nSpillets Normal:10
-n-cas-nullius-chassis-3-inv-size=Nullius's Rustnings Ramme 3 \nMin:0\nMaks:3000\nSpillets Normal:20
-n-cas-nullius-chassis-4-inv-size=Nullius's Rustnings Ramme 4 \nMin:0\nMaks:4000\nSpillets Normal:30
-n-cas-nullius-chassis-5-inv-size=Nullius's Rustnings Ramme 5 \nMin:0\nMaks:5000\nSpillets Normal:40
-n-cas-nullius-chassis-6-inv-size=Nullius's Rustnings Ramme 6 \nMin:0\nMaks:6000\nSpillets Normal:50
+n-cas-nullius-chassis-1-inv-size=Nullius's Rustnings Ramme 1\nMin:0\nMaks:1000\nSpillets Normal:0
+n-cas-nullius-chassis-2-inv-size=Nullius's Rustnings Ramme 2\nMin:0\nMaks:2000\nSpillets Normal:10
+n-cas-nullius-chassis-3-inv-size=Nullius's Rustnings Ramme 3\nMin:0\nMaks:3000\nSpillets Normal:20
+n-cas-nullius-chassis-4-inv-size=Nullius's Rustnings Ramme 4\nMin:0\nMaks:4000\nSpillets Normal:30
+n-cas-nullius-chassis-5-inv-size=Nullius's Rustnings Ramme 5\nMin:0\nMaks:5000\nSpillets Normal:40
+n-cas-nullius-chassis-6-inv-size=Nullius's Rustnings Ramme 6\nMin:0\nMaks:6000\nSpillets Normal:50
 
 # Power Armour mk3 
 cas-pamk3-lvest-inv-size=MK3's Lett Bruksvest\nMin:0\nMaks:150\nSpillets Normal:10
